--- a/project.ipynb
+++ b/project.ipynb
@@ -133,7 +133,7 @@
     "#import data from csv\n",
     "\n",
     "vaccination = pd.read_csv(\"data/covid-vaccination-policy.csv\")\n",
-    "transport = pd.read_csv(\"data/public-transport-covid.csv\")\n",
+    "travel = pd.read_csv(\"data/international-transport-covid.csv\")\n",
     "stay_home = pd.read_csv(\"data/stay-at-home-covid.csv\")\n",
     "\n",
     "face_cover = pd.read_csv(\"data/face-covering-policies-covid.csv\")\n",
